# samantha

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  beads-audit.csv  e2e-results.md  repo-review.md
.beads/: issues.jsonl
app/: project.yml
app/Samantha/: AudioManager.swift  DesktopContextToolExecutor.swift  DevConsoleState.swift  DevConsoleView.swift  HotkeyManager.swift  Info.plist  KeychainHelper.swift  OrbView.swift  OrbWindow.swift  SamanthaApp.swift  SettingsView.swift  TranscriptOverlay.swift  WebSocketClient.swift
app/Samantha.xcodeproj/: project.pbxproj
app/SamanthaTests/: SamanthaTests.swift
backend/: pyproject.toml
backend/samantha/: __init__.py  agents.py  config.py  events.py  interruption.py  main.py  mcp_integration.py  memory.py  mock_client.py  prompts.py  protocol.py  runtime.py  session_manager.py  storage.py  tools.py  ws_server.py
backend/tests/: test_agents.py  test_config.py  test_e2e.py  test_events.py  test_interruption.py  test_mcp.py  test_memory.py  test_mock_client.py  test_prompts.py  test_runtime.py  test_scaffold.py  test_session_manager.py  test_storage.py  test_structure.py  test_tools.py  test_ws_server.py
docs/: ._building-agents-reference.md  architecture.md  building-agents-reference.md  design-direction.md  first-mac-session.md  frontend-handoff.md  ipc-protocol.md  observability.md  spec.md
pipecat-spike-test/: HANDOFF.md  Package.swift  architecture.md  findings.md  provider-comparison.md  spec.md
pipecat-spike-test/Sources/SamanthaSpike/: AITools.swift  AudioManager.swift  Config.swift  (+23 more)
scripts/: dev.sh
