[project]
name = "samantha"
version = "0.1.0"
description = "Voice-first AI companion backend"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.11.0,<1.0.0",
    "websockets>=14.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.0",
]

[project.scripts]
samantha = "samantha.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary operator suggestion (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["samantha"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: tests that exercise live API-backed end-to-end flows",
]
